--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vscode-neovim-pack",
   "displayName": "VSCode Neovim Pack",
-  "description": "Extension pack to configure Neovim in VSCod",
+  "description": "Extension pack to configure Neovim in VSCode",
   "publisher": "agutierrezr",
   "author": {
     "name": "Andrés Gutiérrez"
   },
-  "version": "0.0.1",
+  "version": "1.0.1",
   "icon": "img/vscode_neovim.jpg",
   "engines": {
     "vscode": "^1.95.0"
